--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -10,6 +10,14 @@
 .layers-20RVFW {
   background: rgba(0,0,0, .7) !important;
 }
+.iconCollapsed-1INdMX, 
+.iconDefault-xzclSQ, 
+.nameCollapsed-3_ChMu, 
+.nameDefault-Lnjrwm,
+.name-3gtcmp,
+.theme-dark .message-group .comment .markup {
+    color: white;
+}
 .channels-3g2vYe,
 .theme-dark .title-qAcLxz,
 .container-RYiLUQ,
