--- a/Bowser.theme.css
+++ b/Bowser.theme.css
@@ -1991,10 +1991,10 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     background: linear-gradient(90deg,black 85%,#53B047);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #53B047;
     color: white;
     opacity: 1;
@@ -2002,7 +2002,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: black;
     color: white;
     opacity: 1;
