--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -32,15 +32,15 @@
     cursor: pointer;
 }
 
-.menu-3BZuDT {
+.theme-dark .menu-3BZuDT {
     background: black;
     border-radius: 0px;
     box-shadow: none;
 }
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #5D4037;
     color: white;
 }
@@ -49,7 +49,7 @@
     color: white;
     padding: 8px 4px;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     transition: background-color .3s ease;
 }
 .theme-dark .chat>.content,
