--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -2027,10 +2027,10 @@ form,
     color: rgba(255, 255, 255, 0.6);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #795f72;
     color: white;
     opacity: 1;
@@ -2038,7 +2038,7 @@ form,
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: #5c4957;
     color: white;
     opacity: 1;
