--- a/DoritosTheme.theme.css
+++ b/DoritosTheme.theme.css
@@ -2227,10 +2227,10 @@ background: #730000 !important;
     background: linear-gradient(90deg,black 85%,#FFBB10);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #FD5E00;
     color: white;
     opacity: 1;
@@ -2238,7 +2238,7 @@ background: #730000 !important;
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: black;
     color: white;
     opacity: 1;
