--- a/EpicBubbleTheme.theme.css
+++ b/EpicBubbleTheme.theme.css
@@ -2087,7 +2087,7 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
     color: rgba(255, 255, 255, 0.6);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
 .item-rK1j5B:hover:nth-child(1) {
@@ -2128,12 +2128,12 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: black;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: rgba(208,229,229,0.5);
     color: black;
     opacity: 1;
 }
-.menu-3BZuDT {
+.theme-dark .menu-3BZuDT {
     background: transparent;
     border-radius: 30px;
     box-shadow: none;
