--- a/Luigi.theme.css
+++ b/Luigi.theme.css
@@ -2006,10 +2006,10 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     background: linear-gradient(90deg,black 85%,#019000);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #019000;
     color: white;
     opacity: 1;
@@ -2017,7 +2017,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: #016600;
     color: white;
     opacity: 1;
