--- a/MountainDew.theme.css
+++ b/MountainDew.theme.css
@@ -2407,10 +2407,10 @@ background: #006622 !important;
     color: rgba(255, 255, 255, 0.6);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #88C333;
     color: white;
     opacity: 1;
@@ -2418,7 +2418,7 @@ background: #006622 !important;
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: #014713;
     color: white;
     opacity: 1;
