--- a/NewJerseyDevils.theme.css
+++ b/NewJerseyDevils.theme.css
@@ -2045,10 +2045,10 @@ a, .theme-dark .primary-2giqSn, .user-settings-connections .connection-header .c
     color: rgba(255, 255, 255, 0.6);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #C8102E;
     color: white;
     opacity: 1;
@@ -2056,7 +2056,7 @@ a, .theme-dark .primary-2giqSn, .user-settings-connections .connection-header .c
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: black;
     color: white;
     opacity: 1;
