--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -278,18 +278,18 @@ a,
 }
 /* Popup Menus */
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI,
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     display: none;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     color: white;
 }
-.menu-3BZuDT {
+.theme-dark .menu-3BZuDT {
     background: #4F1C4F;
     border-radius: 0px;
     box-shadow: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #840058;
     color: white;
     opacity: 1;
