--- a/OldHistory.theme.css
+++ b/OldHistory.theme.css
@@ -333,18 +333,18 @@ a {
 	background-color: black !important;
 	box-shadow: none;
 }
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
 	border-bottom: none;
 }
-.menu-3BZuDT {
+.theme-dark .menu-3BZuDT {
 	background-color: black;
 	box-shadow: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
 	background-color: black;
 	color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
 	color: silver;
 	opacity: 1;
 }
