--- a/Peach.theme.css
+++ b/Peach.theme.css
@@ -2006,10 +2006,10 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     color: rgba(255, 255, 255, 0.6);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #F599B2;
     color: white;
     opacity: 1;
@@ -2017,7 +2017,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: #F14E90;
     color: white;
     opacity: 1;
