--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -2007,10 +2007,10 @@ div[class*="switchEnabled"][class*=valueChecked] {
     color: rgba(255, 255, 255, 0.6);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #F5ABC4;
     color: white;
     opacity: 1;
@@ -2018,7 +2018,7 @@ div[class*="switchEnabled"][class*=valueChecked] {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: #C1678B;
     color: white;
     opacity: 1;
