--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -2019,10 +2019,10 @@ color: white;
     background: linear-gradient(90deg,black 85%,#2A5988);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #A0C3F5;
     color: white;
     opacity: 1;
@@ -2030,7 +2030,7 @@ color: white;
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: #2A5988;
     color: white;
     opacity: 1;
