--- a/ShadeofGreenTheme.theme.css
+++ b/ShadeofGreenTheme.theme.css
@@ -1530,10 +1530,10 @@ a {
     background: linear-gradient(90deg,black 85%,green);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #349A34;
     color: white;
     opacity: 1;
@@ -1541,7 +1541,7 @@ a {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: #004C00;
     color: white;
     opacity: 1;
