--- a/TheGreenChristmas.theme.css
+++ b/TheGreenChristmas.theme.css
@@ -1989,10 +1989,10 @@ a {
     background: linear-gradient(90deg,black 85%,#10B51D);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     border: 1px solid #10B51D;
     color: white;
     opacity: 1;
@@ -2001,7 +2001,7 @@ a {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: black;
     color: white;
     opacity: 1;
