--- a/TheQuestionMark.theme.css
+++ b/TheQuestionMark.theme.css
@@ -2065,10 +2065,10 @@ a {
 }
 
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #EB633C;
     color: white;
     opacity: 1;
@@ -2076,7 +2076,7 @@ a {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: black;
     color: white;
     opacity: 1;
