--- a/Twitch.theme.css
+++ b/Twitch.theme.css
@@ -169,7 +169,7 @@
     cursor: pointer;
 }
 
-.menu-3BZuDT {
+.theme-dark .menu-3BZuDT {
     background: #422b6c;
     border-radius: 0px;
     box-shadow: none;
@@ -177,10 +177,10 @@
 .theme-dark .message-group h2 .timestamp {
     color: silver;
 }
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #6d47b2;
     color: white;
 }
@@ -189,7 +189,7 @@
     color: white;
     padding: 8px 4px;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     transition: background-color .3s ease;
 }
 
