--- a/WindowsTheme.theme.css
+++ b/WindowsTheme.theme.css
@@ -4431,10 +4431,10 @@ background-size: cover;
 }
 
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #f65314;
     color: white;
     opacity: 1;
@@ -4465,7 +4465,7 @@ background-size: cover;
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: black;
     color: white;
     opacity: 1;
