--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -1329,10 +1329,10 @@ form, .member:hover {
     color: rgba(255, 255, 255, 0.6);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #000099;
     color: white;
     opacity: 1;
@@ -1340,7 +1340,7 @@ form, .member:hover {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: black;
     color: white;
     opacity: 1;
