--- a/Yoshi.theme.css
+++ b/Yoshi.theme.css
@@ -2065,10 +2065,10 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     box-shadow: none !important;
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #52cc3d;
     color: white;
     opacity: 1;
@@ -2076,7 +2076,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: #53A13C;
     color: white;
     opacity: 1;
