--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -1852,10 +1852,10 @@ background: red;
     background: linear-gradient(90deg,black 85%,#CC1111);
 }
 /* Popup Menu */
-.separator-1hpa3S {
+.theme-dark .separator-1hpa3S {
     border-bottom: none;
 }
-.item-rK1j5B:hover {
+.theme-dark .item-rK1j5B:hover {
     background-color: #CC1111;
     color: white;
     opacity: 1;
@@ -1863,7 +1863,7 @@ background: red;
 .alt-2vq4VR .item-rK1j5B .helper-3X2gjI {
    color: white;
 }
-.item-rK1j5B {
+.theme-dark .item-rK1j5B {
     background-color: black;
     color: white;
     opacity: 1;
